# ChangeLog for app-cdr/acetoneiso
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-cdr/acetoneiso/ChangeLog,v 1.4 2010/01/06 10:52:04 hwoarang Exp $

  06 Jan 2010; <hwoarang@gentoo.org> acetoneiso-2.1.1.ebuild,
  acetoneiso-2.2.1.ebuild:
  Migrate to qt4-r2 eclass

  16 Dec 2009; Samuli Suominen <ssuominen@gentoo.org>
  acetoneiso-2.2.1.ebuild:
  Missing x11-libs/qt-xmlpatterns depend wrt #297004, thanks to Nick Andrade
  for reporting.

*acetoneiso-2.2.1 (09 Dec 2009)

  09 Dec 2009; Samuli Suominen <ssuominen@gentoo.org>
  +acetoneiso-2.2.1.ebuild:
  Version bump.

*acetoneiso-2.1.1 (25 Oct 2009)

  25 Oct 2009; Samuli Suominen <ssuominen@gentoo.org>
  +acetoneiso-2.1.1.ebuild:
  Initial commit wrt #197961, thanks to Gregor Münch for reporting.
