@@ -1,6 +1,6 @@
 # Copyright 1999-2010 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-cdr/acetoneiso/acetoneiso-2.1.1.ebuild,v 1.2 2010/01/06 10:52:04 hwoarang Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-cdr/acetoneiso/acetoneiso-2.1.1.ebuild,v 1.3 2010/01/09 18:54:32 hwoarang Exp $
 
 EAPI=2
 MY_P=${PN}_${PV}
@@ -22,7 +22,7 @@ DEPEND="x11-libs/qt-gui:4
 
 S=${WORKDIR}/${MY_P}/${PN}
 DOCS="AUTHORS CHANGELOG FEATURES README"
-DOCSDIR="${WORKDIR}"
+DOCSDIR="${WORKDIR}/${MY_P}"
 
 src_prepare() {
 	sed -i -e 's:unrar-nonfree:unrar:g' sources/compress.h locale/*.ts || die
