@@ -1,6 +1,10 @@
 # ChangeLog for app-cdr/acetoneiso
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-cdr/acetoneiso/ChangeLog,v 1.4 2010/01/06 10:52:04 hwoarang Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-cdr/acetoneiso/ChangeLog,v 1.5 2010/01/09 18:54:32 hwoarang Exp $
+
+  09 Jan 2010; <hwoarang@gentoo.org> acetoneiso-2.1.1.ebuild,
+  acetoneiso-2.2.1.ebuild:
+  fix DOCSDIR ( bug #300290 )
 
   06 Jan 2010; <hwoarang@gentoo.org> acetoneiso-2.1.1.ebuild,
   acetoneiso-2.2.1.ebuild:
